objects/LGNA_Constants__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores different constants for LGNA</description>
    <fields>
        <fullName>Group_Account_Task_Batch_RUn__c</fullName>
        <description>Please provide the month and date when the batch should run</description>
        <inlineHelpText>please provide value in format mm/dd</inlineHelpText>
        <label>Group Account Task Batch Run</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Working_Hours_per_Day__c</fullName>
        <description>Total working hours of the business per day</description>
        <inlineHelpText>Total working hours of the business per day</inlineHelpText>
        <label>Total Working Hours per Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UW_Due_Date_PrePop_Bigger_Interval__c</fullName>
        <label>UW Due Date PrePop Bigger Interval</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UW_Due_Date_PrePop_Smaller_Interval__c</fullName>
        <label>UW Due Date PrePop Smaller Interval</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Feed_Api__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Feed Api</label>
        <type>Checkbox</type>
    </fields>
    <label>LGNA Constants</label>
</CustomObject>